<resources>
    <string name="app_name">VoteR</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_web_client_id">511800956434-vbtbcf4i3rtvpldcltga3glk3vf13q3k.apps.googleusercontent.com</string>
    <string name="log_out">Log out</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="as_guest">as Guest</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="choose_a_unique_name">Choose a unique name</string>
    <string name="username">Username</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vote">Vote</string>
    <string name="draw">Draw</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="join_vote">Join vote</string>
    <string name="create_vote">Create vote</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="password_again">Password again</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="game_name_placeholder">Game name placeholder</string>
    <string name="name_of_the_choice">Name of the choice</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="name_of_vote">Name of vote</string>
    <string name="create">Create</string>
    <string name="for_group">For group</string>
    <string name="join">Join</string>
    <string name="vote_ends_in">Vote ends in</string>
    <string name="minutes">minutes</string>
    <string name="_2">2</string>
    <string name="or_type_the_code">Or type the code</string>
    <string name="groups">Groups</string>
    <string name="create_new_group">Create new group</string>
    <string name="number_of_groups">Number of groups: %d</string>
    <string name="search_user">Search user</string>
    <string name="name_of_group">Name of group</string>
    <string name="close">Close</string>
    <string name="others_groups">Others\' groups</string>
    <string name="own_groups">Own groups</string>
</resources>