<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="hu.bme.aut.voter.fragments.JoinVoteFragment"
        android:label="@string/join_vote"
        tools:layout="@layout/fragment_join_vote"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="hu.bme.aut.voter.fragments.CreateVoteFragment"
        android:label="@string/create_vote"
        tools:layout="@layout/fragment_create_vote" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="hu.bme.aut.voter.fragments.DrawFragment"
        android:label="@string/draw"
        tools:layout="@layout/fragment_draw" />
</navigation>