<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateVoteFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginVertical="@dimen/xxl_margin"
        android:layout_marginHorizontal="@dimen/large_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etVoteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_vertical_margin"
        android:hint="@string/name_of_vote"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/rvGame"
        app:layout_constraintStart_toStartOf="@+id/rvGame"
        app:layout_constraintTop_toBottomOf="@+id/etGameName" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/xxl_margin"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMinutesPicker" />

    <CheckBox
        android:id="@+id/cbForGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_group"
        app:layout_constraintEnd_toEndOf="@+id/rvGame"
        app:layout_constraintTop_toBottomOf="@+id/etVoteName" />

    <Spinner
        android:id="@+id/spTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/cbForGroup"
        app:layout_constraintEnd_toStartOf="@+id/cbForGroup"
        app:layout_constraintStart_toStartOf="@+id/rvGame"
        app:layout_constraintTop_toTopOf="@+id/cbForGroup" />

    <TextView
        android:id="@+id/tvCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/etGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_of_the_choice"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintStart_toEndOf="@+id/ivIcon"
        app:layout_constraintTop_toBottomOf="@+id/rvGame" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/rvGame"
        app:layout_constraintTop_toBottomOf="@+id/rvGame" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/etGameName"
        app:layout_constraintStart_toStartOf="@+id/rvGame"
        app:layout_constraintTop_toBottomOf="@+id/rvGame"
        android:src="@drawable/ic_cards"/>

    <EditText
        android:id="@+id/etMinutesPicker"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:text="@string/_2"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/tvVoteEndsIn"
        app:layout_constraintTop_toBottomOf="@+id/cbForGroup" />

    <TextView
        android:id="@+id/tvVoteEndsIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_ends_in"
        app:layout_constraintBottom_toBottomOf="@+id/etMinutesPicker"
        app:layout_constraintStart_toStartOf="@+id/rvGame"
        app:layout_constraintTop_toTopOf="@+id/etMinutesPicker" />

    <TextView
        android:id="@+id/tvMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:text="@string/minutes"
        app:layout_constraintBottom_toBottomOf="@+id/etMinutesPicker"
        app:layout_constraintStart_toEndOf="@+id/etMinutesPicker"
        app:layout_constraintTop_toTopOf="@+id/etMinutesPicker" />

</androidx.constraintlayout.widget.ConstraintLayout>