<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DrawFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGame"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="@dimen/large_horizontal_margin"
        android:layout_marginTop="@dimen/xxl_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/btnDraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btnDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xxl_margin"
        android:text="@string/draw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_of_the_choice"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintStart_toEndOf="@+id/ivIcon"
        app:layout_constraintTop_toBottomOf="@+id/rvGame" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/rvGame"
        app:layout_constraintTop_toBottomOf="@+id/rvGame" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/etGameName"
        app:layout_constraintStart_toStartOf="@+id/rvGame"
        app:layout_constraintTop_toBottomOf="@+id/rvGame"
        android:src="@drawable/ic_cards"/>


</androidx.constraintlayout.widget.ConstraintLayout>