<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/tvOr"
        app:layout_constraintEnd_toStartOf="@+id/glV85"
        app:layout_constraintStart_toStartOf="@+id/glV15"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOr" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log Out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleLogin" />

    <Button
        android:id="@+id/btnLogInGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as_guest"
        app:layout_constraintBottom_toTopOf="@+id/tvOr"
        app:layout_constraintEnd_toStartOf="@+id/glV85"
        app:layout_constraintStart_toStartOf="@+id/glV15"
        app:layout_constraintTop_toBottomOf="@+id/tvLogIn" />


    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/glH6"
        app:layout_constraintEnd_toStartOf="@+id/tvOr"
        app:layout_constraintStart_toStartOf="@+id/glV15"
        app:layout_constraintTop_toTopOf="@+id/glH6" />


    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/or"
        app:layout_constraintBottom_toBottomOf="@id/glH6"
        app:layout_constraintEnd_toEndOf="@id/glV5"
        app:layout_constraintStart_toEndOf="@id/glV5"
        app:layout_constraintTop_toTopOf="@id/glH6" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/glH6"
        app:layout_constraintEnd_toStartOf="@+id/glV85"
        app:layout_constraintStart_toEndOf="@+id/tvOr"
        app:layout_constraintTop_toTopOf="@+id/glH6" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>